k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dental-clinic-api
  name: dental-clinic-api
  namespace: dental-clinic-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dental-clinic-api
  template:
    metadata:
      labels:
        app: dental-clinic-api
    spec:
      containers:
        - name: dental-clinic-api
          image: 412631849473.dkr.ecr.ap-southeast-2.amazonaws.com/dental-clinic-express:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dental-clinic-api
  name: dental-clinic-api
  namespace: dental-clinic-app
spec:
  type: LoadBalancer
  selector:
    app: dental-clinic-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
