k8s/ingress.yml
# dental-clinic-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dental-clinic-api-ingress
  namespace: dental-clinic-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:412631849473:certificate/305c8d93-5886-41de-a2f6-666d414d23b4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
    - host: dental-clinic-api.myprofilely.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dental-clinic-api
                port:
                  number: 80
